--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -18,7 +18,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
     <!-- other js -->
-    <script src="js/changeContent.js"></script>
+    <script type="text/javascript" src="js/changeContent.js"></script>
 
 </head>
 <body>
@@ -34,14 +34,14 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#" onclick="changeContent('views/dashboard.html')">XYZ Airlines</a>
+                <a class="navbar-brand" href="#" onclick="changeContent('views/dashboard.html');">XYZ Airlines</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li id="guest-button"><a href="#" onclick="changeContent('views/airport-overview.html')">Airports</a></li>
-                    <li id="room-button"><a href="#" onclick="changeContent('views/plane-overview.html')">Planes</a></li>
+                    <li><a href="#" onclick="changeContent('views/airport-overview.html');">Airports</a></li>
+                    <li><a href="#" onclick="changeContent('views/plane-overview.html');">Planes</a></li>
                 </ul>
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
