--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -16,6 +16,7 @@
 
     <!-- bootstrap js -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/1000hz-bootstrap-validator/0.11.9/validator.min.js"></script>
 
     <!-- other js -->
     <script type="text/javascript" src="js/changeContent.js"></script>
