airport can be added with mulitple planes

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -21,6 +21,8 @@
     <!-- other js -->
     <script type="text/javascript" src="js/changeContent.js"></script>
 
+    <link rel="stylesheet" href="css/main.css">
+
 </head>
 <body>
 <!-- create the top navbar -->
